--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,12 +1,34 @@
-version: '3.8'
+version: '3.7'
+
 services:
   orderer.example.com:
     image: hyperledger/fabric-orderer:latest
     container_name: orderer.example.com
     environment:
-      - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
-    ports:
-      - "7050:7050"
-    volumes:
-      - ./fabric-config:/var/hyperledger/config
+      - ORDERER_GENERAL_LOGLEVEL=info
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric
     command: orderer
+    volumes:
+      - ./channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
+    ports:
+      - 7050:7050
+
+  peer0.org1.example.com:
+    image: hyperledger/fabric-peer:latest
+    container_name: peer0.org1.example.com
+    environment:
+      - CORE_PEER_ID=peer0.org1.example.com
+    volumes:
+      - ./crypto-config:/crypto-config
+    ports:
+      - 7051:7051
+
+  peer0.org2.example.com:
+    image: hyperledger/fabric-peer:latest
+    container_name: peer0.org2.example.com
+    environment:
+      - CORE_PEER_ID=peer0.org2.example.com
+    volumes:
+      - ./crypto-config:/crypto-config
+    ports:
+      - 8051:8051
