--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,34 +1,40 @@
-version: '3.7'
+version: '3.8'
 
 services:
   orderer.example.com:
-    image: hyperledger/fabric-orderer:latest
+    image: hyperledger/fabric-orderer:2.5
     container_name: orderer.example.com
     environment:
-      - ORDERER_GENERAL_LOGLEVEL=info
-    working_dir: /opt/gopath/src/github.com/hyperledger/fabric
-    command: orderer
+      - FABRIC_LOGGING_SPEC=INFO
+      - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
+      - ORDERER_GENERAL_LOCALMSPDIR=/etc/hyperledger/orderer/msp
+      - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
+      - ORDERER_GENERAL_TLS_ENABLED=true
+      - ORDERER_GENERAL_TLS_CERTIFICATE=/etc/hyperledger/orderer/tls/server.crt
+      - ORDERER_GENERAL_TLS_PRIVATEKEY=/etc/hyperledger/orderer/tls/server.key
+      - ORDERER_GENERAL_TLS_ROOTCAS=[/etc/hyperledger/orderer/tls/ca.crt]
     volumes:
-      - ./channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
+      - ./crypto-config/ordererOrganizations/example.com:/etc/hyperledger/orderer
+      - ./genesis.block:/etc/hyperledger/orderer/genesis.block
     ports:
-      - 7050:7050
+      - "7050:7050"
 
   peer0.org1.example.com:
-    image: hyperledger/fabric-peer:latest
+    image: hyperledger/fabric-peer:2.5
     container_name: peer0.org1.example.com
     environment:
       - CORE_PEER_ID=peer0.org1.example.com
+      - CORE_PEER_LOCALMSPID=Org1MSP
+      - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/peer/msp
+      - CORE_PEER_TLS_ENABLED=true
+      - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/peer/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/peer/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/peer/tls/ca.crt
     volumes:
-      - ./crypto-config:/crypto-config
+      - ./crypto-config/peerOrganizations/org1.example.com:/etc/hyperledger/peer
     ports:
-      - 7051:7051
+      - "7051:7051"
 
-  peer0.org2.example.com:
-    image: hyperledger/fabric-peer:latest
-    container_name: peer0.org2.example.com
-    environment:
-      - CORE_PEER_ID=peer0.org2.example.com
-    volumes:
-      - ./crypto-config:/crypto-config
-    ports:
-      - 8051:8051
+networks:
+  default:
+    name: fabric-network
