--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pki-proyect",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "node-forge": "^1.3.1"
