--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@peculiar/webcrypto": "^1.5.0",
+    "asn1js": "^3.0.5",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
-    "node-forge": "^1.3.1"
+    "node-forge": "^1.3.1",
+    "pkijs": "^3.2.4",
+    "selfsigned": "^2.4.1"
   }
 }
